--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="css/reg_style.css">
-    <script href="register.js" rel="script/text"></script>
+    <script href="js/register.js" rel="script/text"></script>
 </head>
 <body>
     <div class="main">
@@ -42,6 +42,6 @@
         </p>
     </div>
 
-    <script src="register.js"></script>
+    <script src="js/register.js"></script>
 </body>
 </html>
