database conncted and register page linked with database

--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <h1>ATN SPORTS</h1>
-        <form id="registerForm">
+        <form id="registerForm" action="register.php" method="post">
             <label for="username">Username:</label>
             <input type="text" 
                    id="username"
