--- a/register.html
+++ b/register.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="css/reg_style.css">
-    <script href="js/register.js" rel="script/text"></script>
+    
 </head>
 <body>
     <div class="main">
         <h1>ATN SPORTS</h1>
-        <form id="registerForm" action="register.php" method="post">
+        <form id="registerForm" action="php/register.php" method="post">
             <label for="username">Username:</label>
             <input type="text" 
                    id="username"
@@ -42,6 +42,6 @@
         </p>
     </div>
 
-    <script src="js/register.js"></script>
+    
 </body>
 </html>
