--- a/product.html
+++ b/product.html
@@ -33,12 +33,12 @@
                             Categories
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="categoriesDropdown">
-                            <li><a class="dropdown-item" href="#">Football</a></li>
-                            <li><a class="dropdown-item" href="#">Basketball</a></li>
-                            <li><a class="dropdown-item" href="#">Tennis</a></li>
-                            <li><a class="dropdown-item" href="#">Cricket</a></li>
+                            <li><a class="dropdown-item" href="football.html">Football</a></li>
+                            <li><a class="dropdown-item" href="basketball.html">Basketball</a></li>
+                            <li><a class="dropdown-item" href="tennis.html">Tennis</a></li>
+                            <!-- <li><a class="dropdown-item" href="#">Cricket</a></li>
                             <li><a class="dropdown-item" href="#">Swimming</a></li>
-                            <li><a class="dropdown-item" href="#">Hockey</a></li>
+                            <li><a class="dropdown-item" href="#">Hockey</a></li> -->
                         </ul>
                     </li>
                     
