--- a/productdetails.html
+++ b/productdetails.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <h1>ATN SPORTS</h1>
-        <form id="ProductDetails" action="php/register.php" method="post">
+        <form id="ProductDetails" action="php/productdetails.php" method="post">
             <label for="Productname">Productname:</label>
             <input type="text" 
                    id="Productname"
